--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 <body>
 
 <header>
-  <nav>
-    <a href="index.html">Start</a>
-    <a href="#">Über uns</a>
-    <a href="#">Pilzberatung</a>
-    <a href="#">Termine</a>
-    <a href="#">Kontakt</a>
-  </nav>
+<nav>
+  <a href="../index.html">Start</a>
+  <a href="ueber-mich.html">Über mich</a>
+  <a href="termine.html">Termine</a>
+  <a href="kontakt.html">Kontakt</a>
+  <a href="https://www.instagram.com/DEIN_INSTAGRAM_NAME" target="_blank">
+    Instagram
+  </a>
+</nav>
+
 </header>
 
 <main>
