--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <header>
 <nav>
-  <a href="../index.html">Start</a>
+  <a href="index.html">Start</a>
   <a href="ueber-mich.html">Über mich</a>
   <a href="termine.html">Termine</a>
   <a href="kontakt.html">Kontakt</a>
-  <a href="https://www.instagram.com/DEIN_INSTAGRAM_NAME" target="_blank">
+  <a href="https://www.instagram.com/bunt.fink" target="_blank">
     Instagram
   </a>
 </nav>
