--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 <header>
 <nav>
   <a href="index.html">Start</a>
-  <a href="ueber-mich.html">Über mich</a>
-  <a href="termine.html">Termine</a>
-  <a href="kontakt.html">Kontakt</a>
-  <a href="https://www.instagram.com/bunt.fink" target="_blank">
-    Instagram
-  </a>
+  <a href="pages/ueber-mich.html">Über mich</a>
+  <a href="pages/termine.html">Termine</a>
+  <a href="pages/kontakt.html">Kontakt</a>
+  <a href="https://www.instagram.com/bunt.fink" target="_blank">Instagram</a>
 </nav>
 
 </header>
