--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
 </main>
 
 <footer>
-  <p>© Pilze Nordheide</p>
+  <p>© Pilze Nordheide · 
+     <a href="pages/impressum.html">Impressum</a> · 
+     <a href="pages/datenschutz.html">Datenschutz</a>
+  </p>
 </footer>
+
 
 </body>
 </html>
