--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
+  <title>Pilzsachverständige Nordheide | Pilzberatung & Exkursionen | Pilze Nordheide</title>
+  <meta name="description" content="Pilzsachverständige und Pilzcoach (DGfM) in der Nordheide. Pilzberatung zu Speisepilzen und Giftpilzen, geführte Pilzwanderungen und Wissensvermittlung über Pilze im Ökosystem Wald.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+  <meta charset="UTF-8">
   <title>Pilze Nordheide</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
