--- a/index.html
+++ b/index.html
@@ -27,18 +27,58 @@
 </header>
 
 <main>
-  <h1>Pilze in der Nordheide</h1>
 
-  <p>
-    Willkommen bei Pilze Nordheide.
-    Diese Seite informiert über Pilzberatung,
-    Exkursionen und Wissenswertes rund um heimische Pilze.
-  </p>
+  <section class="hero">
+    <h1>Pilzsachverständige in der Nordheide</h1>
+    <p class="intro">
+      Als zertifizierte Pilzsachverständige und Pilzcoach der DGfM
+      berate ich zu Speisepilzen und Giftpilzen und begleite
+      Menschen auf achtsamen Entdeckungen durch die Welt der Pilze.
+    </p>
+  </section>
 
-  <p>
-    Die Inhalte werden Schritt für Schritt ergänzt.
-  </p>
+  <section class="image-full">
+    <img src="images/hero.jpg" alt="Pilze im Wald der Nordheide">
+  </section>
+
+  <section class="text-block">
+    <h2>Pilzberatung & Aufklärung</h2>
+    <p>
+      Ich kläre über essbare Pilze, giftige Doppelgänger und
+      den verantwortungsvollen Umgang mit Wildpilzen auf.
+      Fachlich fundiert, sachlich und verständlich.
+    </p>
+
+    <h2>Pilze als Lebewesen im Ökosystem</h2>
+    <p>
+      Pilze sind weit mehr als Sammelobjekte.
+      Sie sind eigenständige Organismen mit zentraler Rolle
+      im Waldökosystem. Sie verbinden Bäume über Mykorrhiza,
+      zersetzen Totholz und schaffen Lebensräume.
+    </p>
+
+    <p>
+      Mein Fokus liegt auf dem genauen Hinsehen –
+      mit Lupe, mit Geduld und mit Respekt.
+      Auch Flechten, Moose und das Zusammenspiel im Wald
+      gehören für mich dazu.
+    </p>
+
+    <p>
+      Wer an meinen Exkursionen teilnimmt,
+      wird den Wald danach mit anderen Augen sehen.
+    </p>
+  </section>
+
+  <section class="image-strip">
+    <img src="images/pilz1.jpg" alt="Speisepilz im Moos">
+    <img src="images/pilz2.jpg" alt="Giftpilz im Wald">
+    <img src="images/pilz3.jpg" alt="Pilzdetails mit Lamellen">
+    <img src="images/pilz4.jpg" alt="Pilz im Heidewald">
+  </section>
+
 </main>
+
 
 <footer>
   <p>© Pilze Nordheide · 
