--- a/pages/ueber-mich.html
+++ b/pages/ueber-mich.html
@@ -2,10 +2,12 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Über mich – Pilze Nordheide</title>
+  <title>Über mich | Pilzsachverständige DGfM | Pilze Nordheide</title>
+  <meta name="description" content="Zertifizierte Pilzsachverständige und Pilzcoach (DGfM) in der Nordheide. Expertise zu Speisepilzen, Giftpilzen und ökologischen Zusammenhängen im Wald.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
 
 <header>
