--- a/pages/ueber-mich.html
+++ b/pages/ueber-mich.html
@@ -21,12 +21,62 @@
 </header>
 
 <main>
-  <h1>Über mich</h1>
-  <p>Hier erzählst du kurz wer du bist, warum Pilze deine Leidenschaft sind und was du machst.
-  Ich bin Finnja und habe mich in die Pilze verguckt.
-  Warum? Sie sind unglcublich vielfältig und immer wieder finde ich Neues heraus. 
-  Es ist Schatzsuche für Große - jede Tour immer wieder ein Fest!</p>
+
+  <section class="hero">
+    <h1>Über mich</h1>
+  </section>
+
+  <section class="portrait">
+    <div class="portrait-image">
+      <img src="../images/portrait.jpg" alt="Pilzsachverständige in der Nordheide">
+    </div>
+    <div class="portrait-text">
+      <p>
+        Ich bin zertifizierte Pilzsachverständige und Pilzcoach
+        der Deutschen Gesellschaft für Mykologie (DGfM).
+        Meine Arbeit verbindet fundierte Artenkenntnis
+        mit Begeisterung für ökologische Zusammenhänge.
+      </p>
+
+      <p>
+        Mein Schwerpunkt liegt in der Aufklärung über
+        Speisepilze, giftige Verwechslungspartner
+        und den verantwortungsvollen Umgang mit Wildpilzen.
+      </p>
+
+      <p>
+        Gleichzeitig fasziniert mich das Unsichtbare:
+        Myzel, Symbiosen, Flechten, Moose und das fein verwobene
+        Netzwerk des Waldes.
+      </p>
+    </div>
+  </section>
+
+  <section class="text-block">
+    <h2>Expertise & Haltung</h2>
+    <p>
+      Pilze sind eigenständige Lebewesen –
+      keine Pflanzen und keine Randerscheinung.
+      Sie sind Grundlage funktionierender Ökosysteme.
+    </p>
+
+    <p>
+      In meinen Exkursionen vermittle ich Wissen,
+      schärfe den Blick für Details
+      und lade dazu ein, den Wald neu wahrzunehmen –
+      aufmerksam, respektvoll und neugierig.
+    </p>
+  </section>
+
+  <section class="image-strip">
+    <img src="../images/pilz1.jpg" alt="Pilz mit Lupe betrachtet">
+    <img src="../images/pilz2.jpg" alt="Moose im Wald">
+    <img src="../images/pilz3.jpg" alt="Flechten an Baumrinde">
+    <img src="../images/pilz4.jpg" alt="Detailaufnahme eines Waldpilzes">
+  </section>
+
 </main>
+
 
 <footer>
   <p>© Pilze Nordheide · 
