--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </section>
 
   <section class="image-full">
-    <img src="images/hero.jpg" alt="Pilze im Wald der Nordheide">
+    <img src="pilzsachverstaendige-nordheide-hero2.webp" alt="Pilze im Wald der Nordheide">
   </section>
 
   <section class="text-block">
