--- a/pages/ueber-mich.html
+++ b/pages/ueber-mich.html
@@ -16,7 +16,7 @@
     <a href="ueber-mich.html">Über mich</a>
     <a href="termine.html">Termine</a>
     <a href="kontakt.html">Kontakt</a>
-    <a href="https://www.instagram.com/DEIN_INSTAGRAM_NAME" target="_blank">Instagram</a>
+    <a href="https://www.instagram.com/bunt.fink" target="_blank">Instagram</a>
   </nav>
 </header>
 
@@ -28,7 +28,7 @@
 
   <section class="portrait">
     <div class="portrait-image">
-      <img src="../images/portrait.jpg" alt="Pilzsachverständige in der Nordheide">
+      <img src="../images/pilzsachverstaendige-nordheide-portrait.webp" alt="Pilzsachverständige in der Nordheide">
     </div>
     <div class="portrait-text">
       <p>
@@ -61,18 +61,17 @@
     </p>
 
     <p>
-      In meinen Exkursionen vermittle ich Wissen,
-      schärfe den Blick für Details
-      und lade dazu ein, den Wald neu wahrzunehmen –
-      aufmerksam, respektvoll und neugierig.
+      In meinen Lehrwanderungen vermittle ich grundlegendes Wissen über Pilze allgemein, aber auch im Beronderen über Speisepilze und giftige Doppelgänger.
+      Ich leite meine Teilnehmer dazu an ihrem Blick zu schärfen und neue Perspektiven im Wald einzunehmen. So wird jeder etwas Neues entdecken. Pilze suchen ist wie Schatzsuche. Voller Abenteuer ind Freude, immer mit Schatz.
+    
     </p>
   </section>
 
   <section class="image-strip">
-    <img src="../images/pilz1.jpg" alt="Pilz mit Lupe betrachtet">
-    <img src="../images/pilz2.jpg" alt="Moose im Wald">
-    <img src="../images/pilz3.jpg" alt="Flechten an Baumrinde">
-    <img src="../images/pilz4.jpg" alt="Detailaufnahme eines Waldpilzes">
+    <img src="../images/pilzsachverstaendige-nordheide-fliegenpilz.webp" alt="Fliegenpilz im Moos, Amanita muscaria">
+    <img src="../images/pilzsachverstaendige-nordheide-steinpilz.webp" alt="Steinpilz, Boletus edulis">
+    <img src="../images/pilzsachverstaendige-nordheide-holzritterling.webp" alt="Purpurfilziger Holzritterling">
+    <img src="../images/pilzsachverstaendige-nordheide-Knollenblätterpilz.webp" alt="Gelber Knollenblätterpilz">
   </section>
 
 </main>
