--- a/pages/ueber-mich.html
+++ b/pages/ueber-mich.html
@@ -62,7 +62,7 @@
 
     <p>
       In meinen Lehrwanderungen vermittle ich grundlegendes Wissen über Pilze allgemein, aber auch im Beronderen über Speisepilze und giftige Doppelgänger.
-      Ich leite meine Teilnehmer dazu an ihrem Blick zu schärfen und neue Perspektiven im Wald einzunehmen. So wird jeder etwas Neues entdecken. Pilze suchen ist wie Schatzsuche. Voller Abenteuer ind Freude, immer mit Schatz.
+      Ich leite meine Teilnehmer dazu an ihrem Blick zu schärfen und neue Perspektiven im Wald einzunehmen. So wird jeder etwas Neues entdecken. Pilze suchen ist wie Schatzsuche. Voller Abenteuer und Freude, immer mit Schatz.
     
     </p>
   </section>
