--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </section>
 
   <section class="image-strip">
-    <img src="images/pilz1.jpg" alt="Speisepilz im Moos">
+    <img src="images/pilzsachverstaendige-nordheide-Schwarztäubling.webp" alt="Schwarztäubling">
     <img src="images/pilz2.jpg" alt="Giftpilz im Wald">
     <img src="images/pilz3.jpg" alt="Pilzdetails mit Lamellen">
     <img src="images/pilz4.jpg" alt="Pilz im Heidewald">
