--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </section>
 
   <section class="image-full">
-    <img src="images/pilzsachverstaendige-nordheide-hero2.webp" alt="Pilze im Wald der Nordheide">
+    <img src="images/pilzsachverstaendige-nordheide-pilze-im-wald-in-der-nordheide.webp" alt="Pilze und Pilzkorb mit Speidepilzen im Wald der Nordheide">
   </section>
 
   <section class="text-block">
@@ -66,7 +66,7 @@
   </section>
 
   <section class="image-strip">
-    <img src="images/pilzsachverstaendige-nordheide-Schwarztäubling.webp" alt="Schwarztäubling">
+    <img src="images/images/pilzsachverstaendige-nordheide-schwarztaeubling.webp" alt="Schwarztäubling von unten mit Sicht auf die Lamellen">
     <img src="images/pilz2.jpg" alt="Giftpilz im Wald">
     <img src="images/pilz3.jpg" alt="Pilzdetails mit Lamellen">
     <img src="images/pilz4.jpg" alt="Pilz im Heidewald">
