--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <header>
 <nav>
-  <a href="index.html">Start</a>
-  <a href="pages/ueber-mich.html">Über mich</a>
-  <a href="pages/termine.html">Termine</a>
-  <a href="pages/kontakt.html">Kontakt</a>
+<a href="#start">Start</a>
+<a href="#ueber-mich">Über mich</a>
+<a href="#termine">Termine</a>
+<a href="#kontakt">Kontakt</a>
   <a href="https://www.instagram.com/bunt.fink" target="_blank">Instagram</a>
 </nav>
 
