--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <main>
 
-  <section class="hero">
+  <section id="start" class="hero">
     <h1>Pilzsachverständige in der Nordheide</h1>
     <p class="intro">
       Als zertifizierte Pilzsachverständige und Pilzcoach der DGfM
@@ -72,6 +72,58 @@
     <img src="images/pilz4.jpg" alt="Pilz im Heidewald">
   </section>
 
+  <section id="ueber-mich">class="hero">
+    <h1>Über mich</h1>
+  </section>
+
+  <section class="portrait">
+    <div class="portrait-image">
+      <img src="../images/pilzsachverstaendige-nordheide-portrait.webp" alt="Pilzsachverständige in der Nordheide">
+    </div>
+    <div class="portrait-text">
+      <p>
+        Ich bin zertifizierte Pilzsachverständige und Pilzcoach
+        der Deutschen Gesellschaft für Mykologie (DGfM).
+        Meine Arbeit verbindet fundierte Artenkenntnis
+        mit Begeisterung für ökologische Zusammenhänge.
+      </p>
+
+      <p>
+        Mein Schwerpunkt liegt in der Aufklärung über
+        Speisepilze, giftige Verwechslungspartner
+        und den verantwortungsvollen Umgang mit Wildpilzen.
+      </p>
+
+      <p>
+        Gleichzeitig fasziniert mich das Unsichtbare:
+        Myzel, Symbiosen, Flechten, Moose und das fein verwobene
+        Netzwerk des Waldes.
+      </p>
+    </div>
+  </section>
+
+  <section class="text-block">
+    <h2>Expertise & Haltung</h2>
+    <p>
+      Pilze sind eigenständige Lebewesen –
+      keine Pflanzen und keine Randerscheinung.
+      Sie sind Grundlage funktionierender Ökosysteme.
+    </p>
+
+    <p>
+      In meinen Lehrwanderungen vermittle ich grundlegendes Wissen über Pilze allgemein, aber auch im Beronderen über Speisepilze und giftige Doppelgänger.
+      Ich leite meine Teilnehmer dazu an ihrem Blick zu schärfen und neue Perspektiven im Wald einzunehmen. So wird jeder etwas Neues entdecken. Pilze suchen ist wie Schatzsuche. Voller Abenteuer und Freude, immer mit Schatz.
+    
+    </p>
+  </section>
+
+  <section class="image-strip">
+    <img src="../images/pilzsachverstaendige-nordheide-fliegenpilz.webp" alt="Fliegenpilz im Moos, Amanita muscaria">
+    <img src="../images/pilzsachverstaendige-nordheide-steinpilz.webp" alt="Steinpilz, Boletus edulis">
+    <img src="../images/pilzsachverstaendige-nordheide-holzritterling.webp" alt="Purpurfilziger Holzritterling">
+    <img src="../images/pilzsachverstaendige-nordheide-Knollenblätterpilz.webp" alt="Gelber Knollenblätterpilz">
+  </section>
+  
 </main>
 
 
