--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <img src="images/pilz4.jpg" alt="Pilz im Heidewald">
   </section>
 
-  <section id="ueber-mich">class="hero">
+  <section id="ueber-mich">
     <h1>Über mich</h1>
   </section>
 
