--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
     <img src="../images/pilzsachverstaendige-nordheide-holzritterling.webp" alt="Purpurfilziger Holzritterling">
     <img src="../images/pilzsachverstaendige-nordheide-Knollenblätterpilz.webp" alt="Gelber Knollenblätterpilz">
   </section>
+
+  <main>
+    <section id="termine">
+  <h1>Termine</h1>
+  <p>Termine folgen in Kürze.</p>
+       </section>
+</main>
+
+  <main>
+    <section id="termine">    
+  <h1>Kontakt</h1>
+  <p>Kontaktiere mich gerne per E-Mail oder schick mir eine Nachricht über Instagram.</p>
+       </section>
+</main>
   
 </main>
 
