--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <section class="portrait">
     <div class="portrait-image">
-      <img src="../images/pilzsachverstaendige-nordheide-portrait.webp" alt="Pilzsachverständige in der Nordheide">
+      <img src="images/pilzsachverstaendige-nordheide-portrait.webp" alt="Pilzsachverständige in der Nordheide">
     </div>
     <div class="portrait-text">
       <p>
@@ -118,29 +118,23 @@
   </section>
 
   <section class="image-strip">
-    <img src="../images/pilzsachverstaendige-nordheide-fliegenpilz.webp" alt="Fliegenpilz im Moos, Amanita muscaria">
-    <img src="../images/pilzsachverstaendige-nordheide-steinpilz.webp" alt="Steinpilz, Boletus edulis">
-    <img src="../images/pilzsachverstaendige-nordheide-holzritterling.webp" alt="Purpurfilziger Holzritterling">
-    <img src="../images/pilzsachverstaendige-nordheide-Knollenblätterpilz.webp" alt="Gelber Knollenblätterpilz">
+    <img src="images/pilzsachverstaendige-nordheide-fliegenpilz.webp" alt="Fliegenpilz im Moos, Amanita muscaria">
+    <img src="images/pilzsachverstaendige-nordheide-steinpilz.webp" alt="Steinpilz, Boletus edulis">
+    <img src="images/pilzsachverstaendige-nordheide-holzritterling.webp" alt="Purpurfilziger Holzritterling">
+    <img src="images/pilzsachverstaendige-nordheide-Knollenblätterpilz.webp" alt="Gelber Knollenblätterpilz">
   </section>
 
-  <main>
     <section id="termine">
   <h1>Termine</h1>
   <p>Termine folgen in Kürze.</p>
        </section>
-</main>
 
-  <main>
-    <section id="termine">    
+    <section id="kontakt">    
   <h1>Kontakt</h1>
   <p>Kontaktiere mich gerne per E-Mail oder schick mir eine Nachricht über Instagram.</p>
        </section>
 </main>
-  
-</main>
-
-
+    
 <footer>
   <p>© Pilze Nordheide · 
      <a href="pages/impressum.html">Impressum</a> · 
