--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <section id="kontakt">    
   <h1>Kontakt</h1>
-  <p>Kontaktiere mich gerne per E-Mail oder schick mir eine Nachricht über Instagram.</p>
+  <p>Kontaktiere mich gerne per E-Mail über pilze-nordheide@posteo.de oder schick mir eine Nachricht über Instagram.</p>
        </section>
 </main>
     
