--- a/index.html
+++ b/index.html
@@ -124,15 +124,49 @@
     <img src="images/pilzsachverstaendige-nordheide-Knollenblätterpilz.webp" alt="Gelber Knollenblätterpilz">
   </section>
 
-    <section id="termine">
-  <h1>Termine</h1>
-  <p>Termine folgen in Kürze.</p>
-       </section>
+  <!-- ========================= -->
+  <!-- Termine -->
+  <!-- ========================= -->
 
-    <section id="kontakt">    
-  <h1>Kontakt</h1>
-  <p>Kontaktiere mich gerne per E-Mail über pilze-nordheide@posteo.de oder schick mir eine Nachricht über Instagram.</p>
-       </section>
+  <section id="termine" class="text-block">
+    <h1>Termine</h1>
+    <p>
+      Hier findest du aktuelle Termine für Pilzlehrwanderungen,
+      geführte Pilzexkursionen und naturkundliche Veranstaltungen
+      in der Nordheide.
+    </p>
+
+    <p>
+      Neue Termine werden fortlaufend ergänzt.
+      Wenn du informiert bleiben möchtest, folge mir gerne auf
+      Instagram oder schreibe mir direkt.
+    </p>
+  </section>
+
+
+  <!-- ========================= -->
+  <!-- Kontakt -->
+  <!-- ========================= -->
+
+  <section id="kontakt" class="text-block">
+    <h1>Kontakt</h1>
+
+    <p>
+      Du hast Fragen zu einer Pilzberatung, möchtest an einer
+      Pilzwanderung teilnehmen oder einen individuellen Termin
+      vereinbaren?
+    </p>
+
+    <p>
+      Schreibe mir gerne eine E-Mail oder kontaktiere mich
+      über mein Instagram-Profil.
+    </p>
+
+    <p>
+      Ich freue mich über deine Nachricht.
+    </p>
+  </section>
+
 </main>
     
 <footer>
