--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </section>
 
   <section class="image-full">
-    <img src="images/pilzsachverstaendige-nordheide-pilze-im-wald-in-der-nordheide.webp" alt="Pilze und Pilzkorb mit Speidepilzen im Wald der Nordheide">
+    <img src="images/pilzsachverstaendige-nordheide-pilze-im-wald-in-der-nordheide.webp" alt="Pilze und Pilzkorb mit Speisepilzen im Wald der Nordheide">
   </section>
 
   <section class="text-block">
