--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
       in der Nordheide.
     </p>
 
+       <p>
+         Beispieltermin 1
+    </p>
+
+      <p>
+         Beispieltermin 2
+    </p>
+
+      <p>
+         Beispieltermin 3
+    </p>
+
     <p>
       Neue Termine werden fortlaufend ergänzt.
       Wenn du informiert bleiben möchtest, folge mir gerne auf
