--- a/index.html
+++ b/index.html
@@ -198,6 +198,15 @@
   </section>
 
 </main>
+
+    <section id="danke" class="text-block danke-section">
+  <h1>Fast geschafft</h1>
+  <p>
+    Bitte bestätige deine Anmeldung über den Link in deiner E-Mail.
+    Erst danach erhältst du die Pilzpost aus der Nordheide.
+  </p>
+</section>
+
     
 <footer>
   <p>© Pilze Nordheide · 
