--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <a href="#start">Start</a>
 <a href="#ueber-mich">Über mich</a>
 <a href="#termine">Termine</a>
+<a href="#newsletter">Newsletter</a>
 <a href="#kontakt">Kontakt</a>
   <a href="https://www.instagram.com/bunt.fink" target="_blank">Instagram</a>
 </nav>
