--- a/index.html
+++ b/index.html
@@ -165,9 +165,8 @@
   <h2>Pilzpost aus der Nordheide</h2>
 
   <p>
-    Erhalte saisonale Hinweise zu Pilzlehrwanderungen,
-    aktuelle Termine und fundiertes Wissen über
-    Speise- und Giftpilze im Waldökosystem.
+    Du möchtest als erstes über die neuen Termine für meine Pilzlehrwanderungen informiert werden? Dann melde dich hier für meinen Newsletter an.
+    Du bekommst keinen Spam von mir - ich schreibe nur wenn ich interessante Neuigkeiten habe.
   </p>
 
   <!-- Begin Brevo Form -->
