--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
   <h2>Pilzpost aus der Nordheide</h2>
 
   <p>
-    Du möchtest als erstes über die neuen Termine für meine Pilzlehrwanderungen informiert werden? Dann melde dich hier für meinen Newsletter an.
-    Du bekommst keinen Spam von mir - ich schreibe nur wenn ich interessante Neuigkeiten habe.
+    Du möchtest als Erstes über die neuen Termine für meine Pilzlehrwanderungen informiert werden? Dann melde dich hier für meinen Newsletter an.
+    Du bekommst keinen Spam von mir - ich schreibe nur, wenn ich interessante Neuigkeiten habe.
   </p>
 
   <!-- Begin Brevo Form -->
