--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Pilzsachverständige und Pilzcoach (DGfM) in der Nordheide. Pilzberatung zu Speisepilzen und Giftpilzen, geführte Pilzwanderungen und Wissensvermittlung über Pilze im Ökosystem Wald.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="48x48" href="faviconboletus.png">
 </head>
 
   <body>
