--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
   <body>
 
 <header>
-<nav>
-<a href="#start">Start</a>
+<nav class="nav-container">
+
+<div class="nav-logo">
+    <a href="#start">
+    <img src="images/logo-pilz.png" alt="Pilze Nordheide Logo">
+     </a>
+  </div>
+
+<div class="nav-links">
 <a href="#ueber-mich">Über mich</a>
 <a href="#termine">Termine</a>
 <a href="#newsletter">Newsletter</a>
 <a href="#kontakt">Kontakt</a>
-  <a href="https://www.instagram.com/bunt.fink" target="_blank">Instagram</a>
-</nav>
+<a href="https://www.instagram.com/bunt.fink" target="_blank">Instagram</a>
+    </div>
+
+  </nav>
 
 </header>
 
