--- a/index.html
+++ b/index.html
@@ -11,28 +11,32 @@
 
   <body>
 
-<header>
-<nav class="nav-container">
+<header class="site-header">
+  <div class="header-inner">
 
-<div class="nav-logo">
-    <a href="#start">
-    <img src="images/logo-pilz.png" alt="Pilze Nordheide Logo">
-     </a>
-  </div>
+    <a href="#start" class="logo">
+      <img src="images/logo-pilz.png" alt="Pilze Nordheide Logo">
+    </a>
 
-<div class="nav-links">
-<a href="#ueber-mich">Über mich</a>
-<a href="#termine">Termine</a>
+    <nav class="main-nav">
+      <a href="#start">Start</a>
+      <a href="#ueber-mich">Über mich</a>
+      <a href="#termine">Termine</a>
 <a href="#newsletter">Newsletter</a>
-<a href="#kontakt">Kontakt</a>
+      <a href="#kontakt">Kontakt</a>
 <a href="https://www.instagram.com/bunt.fink" target="_blank">Instagram</a>
+    </nav>
+
+    <div class="burger" id="burger">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
 
-  </nav>
-
+  </div>
 </header>
 
-<main>
+    <main>
 
   <section id="start" class="hero">
     <h1>Pilzsachverständige in der Nordheide</h1>
