--- a/index.html
+++ b/index.html
@@ -361,6 +361,16 @@
   </p>
 </footer>
 
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const burger = document.getElementById("burger");
+    const nav = document.querySelector(".main-nav");
+
+    burger.addEventListener("click", function() {
+      nav.classList.toggle("active");
+    });
+  });
+</script>
 
 </body>
 </html>
