--- a/index.html
+++ b/index.html
@@ -362,21 +362,26 @@
 </footer>
 
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const burger = document.getElementById("burger");
-    const nav = document.querySelector(".main-nav");
-    const links = document.querySelectorAll(".main-nav a");
+document.addEventListener("DOMContentLoaded", function () {
 
-    burger.addEventListener("click", function() {
+  const burger = document.getElementById("burger");
+  const nav = document.querySelector(".main-nav");
+  const links = document.querySelectorAll(".main-nav a");
+
+  if (burger && nav) {
+
+    burger.addEventListener("click", function () {
       nav.classList.toggle("active");
     });
 
     links.forEach(link => {
-      link.addEventListener("click", function() {
+      link.addEventListener("click", function () {
         nav.classList.remove("active");
       });
     });
-  });
+
+  }
+});
 </script>
 
 </body>
