--- a/index.html
+++ b/index.html
@@ -36,23 +36,33 @@
   </div>
 </header>
 
-    <main>
+<main>
+
+  <!-- ================= START ================= -->
 
   <section id="start" class="hero">
-    <h1>Pilzsachverständige in der Nordheide</h1>
+    <h1>Pilzsachverständige in der Nordheide – Pilzberatung & Lehrwanderungen</h1>
+
     <p class="intro">
-      Als zertifizierte Pilzsachverständige und Pilzcoach der DGfM
-      berate ich zu Speisepilzen und Giftpilzen und begleite
-      Menschen auf achtsamen Entdeckungen durch die Welt der Pilze.
+      Als zertifizierte Pilzsachverständige und Pilzcoach der Deutschen Gesellschaft für Mykologie (DGfM)
+      berate ich zu Speisepilzen und Giftpilzen und begleite Menschen
+      auf achtsamen Entdeckungen durch die Welt der Pilze –
+      im Raum Tostedt sowie in der Nordheide zwischen Buchholz,
+      Hollenstedt, Sittensen, Schneverdingen und Rosengarten.
     </p>
   </section>
 
   <section class="image-full">
-    <img src="images/pilzsachverstaendige-nordheide-pilze-im-wald-in-der-nordheide.webp" alt="Pilze und Pilzkorb mit Speisepilzen im Wald der Nordheide">
+    <img src="images/pilzsachverstaendige-nordheide-pilze-im-wald-in-der-nordheide.webp"
+         alt="Pilze und Pilzkorb mit Speisepilzen im Wald der Nordheide bei Tostedt">
   </section>
+
+
+  <!-- ================= PILZBERATUNG ================= -->
 
   <section class="text-block">
     <h2>Pilzberatung & Aufklärung</h2>
+
     <p>
       Ich kläre über essbare Pilze, giftige Doppelgänger und
       den verantwortungsvollen Umgang mit Wildpilzen auf.
@@ -60,6 +70,7 @@
     </p>
 
     <h2>Pilze als Lebewesen im Ökosystem</h2>
+
     <p>
       Pilze sind weit mehr als Sammelobjekte.
       Sie sind eigenständige Organismen mit zentraler Rolle
@@ -80,21 +91,39 @@
     </p>
   </section>
 
+
+  <!-- ================= GALERIE 1 ================= -->
+
   <section class="image-strip">
-    <img src="images/pilzsachverstaendige-nordheide-schwarztaeubling.webp" alt="Schwarztäubling von unten mit Sicht auf die Lamellen">
-    <img src="images/pilz2.jpg" alt="Giftpilz im Wald">
-    <img src="images/pilz3.jpg" alt="Pilzdetails mit Lamellen">
-    <img src="images/pilz4.jpg" alt="Pilz im Heidewald">
+    <img src="images/pilzsachverstaendige-nordheide-schwarztaeubling.webp"
+         alt="Schwarztäubling mit sichtbaren Lamellen im Wald der Nordheide">
+
+    <img src="images/pilzsachverstaendige-nordheide-giftpilz-im-wald.webp"
+         alt="Giftpilz im Wald in der Nordheide">
+
+    <img src="images/pilzsachverstaendige-nordheide-pilzdetails-lamellen.webp"
+         alt="Detailaufnahme eines Pilzes mit Lamellen">
+
+    <img src="images/pilzsachverstaendige-nordheide-pilz-im-heidewald.webp"
+         alt="Pilz im Heidewald der Nordheide">
   </section>
 
+
+  <!-- ================= ÜBER MICH ================= -->
+
   <section id="ueber-mich">
-    <h1>Über mich</h1>
+    <div class="text-block">
+      <h2>Über mich</h2>
+    </div>
   </section>
 
   <section class="portrait">
+
     <div class="portrait-image">
-      <img src="images/pilzsachverstaendige-nordheide-portrait.webp" alt="Pilzsachverständige in der Nordheide">
+      <img src="images/pilzsachverstaendige-nordheide-portrait.webp"
+           alt="Pilzsachverständige bei einer Lehrwanderung im Wald der Nordheide">
     </div>
+
     <div class="portrait-text">
       <p>
         Ich bin zertifizierte Pilzsachverständige und Pilzcoach
@@ -115,10 +144,15 @@
         Netzwerk des Waldes.
       </p>
     </div>
+
   </section>
+
+
+  <!-- ================= EXPERTISE ================= -->
 
   <section class="text-block">
     <h2>Expertise & Haltung</h2>
+
     <p>
       Pilze sind eigenständige Lebewesen –
       keine Pflanzen und keine Randerscheinung.
@@ -126,52 +160,55 @@
     </p>
 
     <p>
-      In meinen Lehrwanderungen vermittle ich grundlegendes Wissen über Pilze allgemein, aber auch im Beronderen über Speisepilze und giftige Doppelgänger.
-      Ich leite meine Teilnehmer dazu an ihrem Blick zu schärfen und neue Perspektiven im Wald einzunehmen. So wird jeder etwas Neues entdecken. Pilze suchen ist wie Schatzsuche. Voller Abenteuer und Freude, immer mit Schatz.
-    
+      In meinen Lehrwanderungen vermittle ich grundlegendes Wissen über Pilze,
+      insbesondere über Speisepilze und giftige Doppelgänger.
+      Ich leite meine Teilnehmer dazu an, ihren Blick zu schärfen
+      und neue Perspektiven im Wald einzunehmen.
+      So wird jeder etwas Neues entdecken.
+      Pilze suchen ist wie Schatzsuche –
+      voller Abenteuer und Freude.
     </p>
   </section>
 
+
+  <!-- ================= GALERIE 2 ================= -->
+
   <section class="image-strip">
-    <img src="images/pilzsachverstaendige-nordheide-fliegenpilz.webp" alt="Fliegenpilz im Moos, Amanita muscaria">
-    <img src="images/pilzsachverstaendige-nordheide-steinpilz.webp" alt="Steinpilz, Boletus edulis">
-    <img src="images/pilzsachverstaendige-nordheide-holzritterling.webp" alt="Purpurfilziger Holzritterling">
-    <img src="images/pilzsachverstaendige-nordheide-Knollenblätterpilz.webp" alt="Gelber Knollenblätterpilz">
+    <img src="images/pilzsachverstaendige-nordheide-fliegenpilz.webp"
+         alt="Fliegenpilz im Moos in der Nordheide, Amanita muscaria">
+
+    <img src="images/pilzsachverstaendige-nordheide-steinpilz.webp"
+         alt="Steinpilz im Wald bei Tostedt, Boletus edulis">
+
+    <img src="images/pilzsachverstaendige-nordheide-holzritterling.webp"
+         alt="Purpurfilziger Holzritterling im Heidewald">
+
+    <img src="images/pilzsachverstaendige-nordheide-gelber-knollenblaetterpilz.webp"
+         alt="Gelber Knollenblätterpilz im Wald der Nordheide">
   </section>
 
-  <!-- ========================= -->
-  <!-- Termine -->
-  <!-- ========================= -->
+
+  <!-- ================= TERMINE ================= -->
 
   <section id="termine" class="text-block">
-    <h1>Termine</h1>
+    <h2>Termine</h2>
+
     <p>
       Hier findest du aktuelle Termine für Pilzlehrwanderungen,
       geführte Pilzexkursionen und naturkundliche Veranstaltungen
-      in der Nordheide.
+      im Raum Tostedt und in der Nordheide.
     </p>
 
-       <p>
-         Beispieltermin 1
-    </p>
+    <p>Beispieltermin 1</p>
+    <p>Beispieltermin 2</p>
+    <p>Beispieltermin 3</p>
+    <p>Beispieltermin 4</p>
+    <p>Beispieltermin 5</p>
 
-      <p>
-         Beispieltermin 2
-    </p>
-
-      <p>
-         Beispieltermin 3
-    </p>
-  <p>
-         Beispieltermin 4
-    </p>
-      <p>
-         Beispieltermin 5
-    </p>
     <p>
       Neue Termine werden fortlaufend ergänzt.
-      Wenn du informiert bleiben möchtest, folge mir gerne auf
-      Instagram oder schreibe mir direkt.
+      Wenn du informiert bleiben möchtest, folge mir gerne auf Instagram
+      oder schreibe mir direkt.
     </p>
   </section>
 
